...
	explore: 'Explore',
	personalizedLists: 'Personalized Lists',
	nearbySpotLists: 'Nearby Lists',
	popularLists: 'Popular Lists',
	viewMore: 'View More',
	listsYouLiked: 'Liked Lists',
	myLists: 'My Lists',
	selectCountry: 'Select Country',
	selectCity: 'Select City',
	allCities: 'All Cities',
	create: 'Create',
	createList: 'Create List',
	editList: 'Edit List',
...
	vegan: 'Vegan',
	vegetarian: 'Vegetarian',
	fastFood: 'Fast Food',
	report: 'Report',
	listSettings: 'List Settings',
	createBy: 'Create by',
	spots: 'Spots',
	follows: 'Follows',
	views: 'Views',
	mapLocations: 'Map Locations',
	all: 'All',
	liked: 'Liked',
	saved: 'Saved',
...
	allowLocationSharing: 'Allow Location Sharing',
	allowLocationSharingMessage:
		'We would like to access your current location to suggest the best spots near you while using our app.',
	allow: 'Allow',
	noItemsAvailable: 'No items available',
	deny: 'Deny',
	profile: 'Profile',
	profileSettings: 'Profile Settings',
	editProfile: 'Edit Profile',
	logout: 'Logout',
	areYouSureYouWantToLogout: 'Are you sure you want to logout?',
	followers: 'Followers',
	beenTo: 'Been to',
	favorites: 'Favorites',
	savedSpots: 'Saved Spots',
...
	clearAll: 'Clear All',
	deleteAccount: 'Delete Account',
	biography: 'Biography',
	areYouSureYouWantToDeleteYourAccount:
		'Are you sure you want to delete your account?',
	usernameCanNotBeEmpty: 'Username Cannot Be Blank',
	savedLists: 'Saved Lists',
	likedLists: 'Liked Lists',
	block: 'Block',
	unblock: 'Unblock',
	visitedSpots: 'Visited Spots',
	likedSpots: 'Liked Spots',
	nameCanNotBeEmpty: 'Name',
	myCode: 'My Code',
	scan: 'Scan',
	tarotDate: 'Since %{date}',
	customize: 'Customize',
	customizeCard: 'Customize Card',
...
